// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipes page component  expected to match snapshot  1`] = `
<Connect(RecipesDisplay)
  getAllRecipes={[Function]}
  getRecipes={[Function]}
  recipes={
    Array [
      Object {
        "category": "drinks",
        "downVotes": 1,
        "id": 1,
        "image": Object {},
        "name": "cappuccino",
        "upVotes": 1,
        "views": 1,
      },
    ]
  }
  search={[Function]}
  searchTerm=""
  title="recipes"
  user={
    Object {
      "favRecipes": Array [
        Object {
          "id": 1,
        },
      ],
      "id": 1,
    }
  }
/>
`;

exports[`Recipes page component  should call props.getAllRecipes when fetchRecipes is called 1`] = `
<Connect(RecipesDisplay)
  getAllRecipes={[Function]}
  getRecipes={[Function]}
  recipes={
    Array [
      Object {
        "category": "drinks",
        "downVotes": 1,
        "id": 1,
        "image": Object {},
        "name": "cappuccino",
        "upVotes": 1,
        "views": 1,
      },
    ]
  }
  search={[Function]}
  searchTerm=""
  title="recipes"
  user={
    Object {
      "favRecipes": Array [
        Object {
          "id": 1,
        },
      ],
      "id": 1,
    }
  }
/>
`;

exports[`Recipes page component  should call props.search when search term is defined and fetchRecipes
  is called 1`] = `
<Connect(RecipesDisplay)
  getAllRecipes={[Function]}
  getRecipes={[Function]}
  recipes={
    Array [
      Object {
        "category": "drinks",
        "downVotes": 1,
        "id": 1,
        "image": Object {},
        "name": "cappuccino",
        "upVotes": 1,
        "views": 1,
      },
    ]
  }
  search={[Function]}
  searchTerm="rice"
  title="recipes"
  user={
    Object {
      "favRecipes": Array [
        Object {
          "id": 1,
        },
      ],
      "id": 1,
    }
  }
/>
`;
